# searching-algorithms-server

./: .gitignore  AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Compare.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MyParallerServer.cpp  MyParallerServer.h  MyPriorityQueue.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ObjectAdapter.cpp  ObjectAdapter.h  README.md  Searchable.cpp  Searchable.h  Searcheable.cpp  Searcheable.h  Searcher.cpp  Searcher.h  Server.h  Solution.cpp  Solution.h  (+6 more)
Result Data/: AStar.txt  BFS.txt  BestFirstSearch.txt  DFS.txt  Matricies.txt
Solutions/: .gitkeep  hello  world.StringReverser  shalom.StringReverser
Test_Matricies/: Matrix1.txt  Matrix10.txt  Matrix2.txt  Matrix3.txt  Matrix4.txt  Matrix5.txt  Matrix6.txt  Matrix7.txt  Matrix8.txt  Matrix9.txt
